# langgraph-workshop

./: .env.example  Readme.md  pyproject.toml
notebooks/: 1_basics.ipynb  1_langgraph_crash_course.ipynb  2_1_short_term_memory.ipynb  2_2_long_term_memory.ipynb  2_short_memory.ipynb  3_long_term.ipynb  4_speech_to_text_systems.ipynb  4_stt.ipynb  5_text_to_speech_systems.ipynb  5_tts.ipynb  6_vision_language_models.ipynb  6_vlm.ipynb  7_image_generation.ipynb  8_telegram.ipynb  8_telegram_agent.ipynb
