[project]
name = "langgraph-workshop"
version = "0.1.0"
description = ""
authors = [
    {name = "shubhamprajapati7748",email = "shubhamprajapati7748@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
